--- a/Hungry Yeti/Hungry Yeti/Base.lproj/Main.storyboard
+++ b/Hungry Yeti/Hungry Yeti/Base.lproj/Main.storyboard
@@ -119,7 +119,7 @@
                                     </mask>
                                 </variation>
                                 <connections>
-                                    <segue destination="e41-zn-dto" kind="show" id="3hj-WO-Anr"/>
+                                    <action selector="changeText:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="PWr-J2-ayT"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.png" translatesAutoresizingMaskIntoConstraints="NO" id="eI8-4N-8QP">
@@ -143,11 +143,24 @@
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews from Yelp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xg5-A2-M62">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="2py-Dj-atT"/>
+                                    <constraint firstAttribute="width" constant="114" id="ak0-32-EB8"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="138" y="759" width="114" height="21"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="2py-Dj-atT"/>
+                                        <exclude reference="ak0-32-EB8"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="2py-Dj-atT"/>
+                                        <include reference="ak0-32-EB8"/>
+                                    </mask>
                                 </variation>
                             </label>
                         </subviews>
@@ -161,6 +174,7 @@
                             <constraint firstAttribute="centerX" secondItem="gY1-qh-AhO" secondAttribute="centerX" constant="-20.5" id="IdH-ld-xzu"/>
                             <constraint firstItem="J9I-gc-Zn5" firstAttribute="top" secondItem="DrB-Ld-KmZ" secondAttribute="bottom" constant="27" id="OBe-78-rFq"/>
                             <constraint firstItem="DrB-Ld-KmZ" firstAttribute="top" secondItem="gY1-qh-AhO" secondAttribute="bottom" constant="-31" id="QJt-5D-eOV"/>
+                            <constraint firstAttribute="centerY" secondItem="xg5-A2-M62" secondAttribute="centerY" constant="-369.5" id="WqB-Bj-DOk"/>
                             <constraint firstAttribute="centerX" secondItem="gY1-qh-AhO" secondAttribute="centerX" constant="-3" id="WsR-Ea-aGJ"/>
                             <constraint firstAttribute="centerY" secondItem="J9I-gc-Zn5" secondAttribute="centerY" constant="-147" id="XCV-ef-KNu"/>
                             <constraint firstAttribute="centerY" secondItem="DrB-Ld-KmZ" secondAttribute="centerY" constant="100.5" id="XdF-eW-ksa"/>
@@ -172,6 +186,7 @@
                             <constraint firstItem="J9I-gc-Zn5" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="96" id="tQJ-29-F1Y"/>
                             <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" id="tgA-6j-lhI"/>
                             <constraint firstItem="J9I-gc-Zn5" firstAttribute="top" secondItem="pXR-1b-YLO" secondAttribute="bottom" constant="95" id="wHA-Wo-Qv2"/>
+                            <constraint firstAttribute="centerX" secondItem="xg5-A2-M62" secondAttribute="centerX" constant="5" id="xeE-aP-LFN"/>
                             <constraint firstAttribute="centerX" secondItem="J9I-gc-Zn5" secondAttribute="centerX" id="ys1-hL-e15"/>
                         </constraints>
                         <variation key="default">
@@ -182,15 +197,13 @@
                                 <exclude reference="xg5-A2-M62"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="QJt-5D-eOV"/>
-                                <exclude reference="XdF-eW-ksa"/>
-                                <exclude reference="oFw-Sy-J74"/>
                                 <exclude reference="8cF-VP-ReQ"/>
                                 <exclude reference="IEc-0c-jb6"/>
                                 <exclude reference="IdH-ld-xzu"/>
                                 <exclude reference="WsR-Ea-aGJ"/>
-                                <exclude reference="6p3-TE-oT8"/>
-                                <exclude reference="m8k-Hw-l1e"/>
+                                <exclude reference="QJt-5D-eOV"/>
+                                <exclude reference="XdF-eW-ksa"/>
+                                <exclude reference="oFw-Sy-J74"/>
                                 <exclude reference="AcC-d9-puh"/>
                                 <exclude reference="OBe-78-rFq"/>
                                 <exclude reference="XCV-ef-KNu"/>
@@ -201,6 +214,10 @@
                                 <exclude reference="tgA-6j-lhI"/>
                                 <exclude reference="wHA-Wo-Qv2"/>
                                 <exclude reference="ys1-hL-e15"/>
+                                <exclude reference="6p3-TE-oT8"/>
+                                <exclude reference="m8k-Hw-l1e"/>
+                                <exclude reference="WqB-Bj-DOk"/>
+                                <exclude reference="xeE-aP-LFN"/>
                                 <exclude reference="0FT-a2-5GP"/>
                             </mask>
                         </variation>
@@ -220,15 +237,13 @@
                                 <include reference="xg5-A2-M62"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="QJt-5D-eOV"/>
-                                <include reference="XdF-eW-ksa"/>
-                                <include reference="oFw-Sy-J74"/>
                                 <include reference="8cF-VP-ReQ"/>
                                 <exclude reference="IEc-0c-jb6"/>
                                 <include reference="IdH-ld-xzu"/>
                                 <exclude reference="WsR-Ea-aGJ"/>
-                                <include reference="6p3-TE-oT8"/>
-                                <include reference="m8k-Hw-l1e"/>
+                                <include reference="QJt-5D-eOV"/>
+                                <include reference="XdF-eW-ksa"/>
+                                <include reference="oFw-Sy-J74"/>
                                 <exclude reference="AcC-d9-puh"/>
                                 <include reference="OBe-78-rFq"/>
                                 <exclude reference="XCV-ef-KNu"/>
@@ -239,6 +254,10 @@
                                 <exclude reference="tgA-6j-lhI"/>
                                 <exclude reference="wHA-Wo-Qv2"/>
                                 <exclude reference="ys1-hL-e15"/>
+                                <include reference="6p3-TE-oT8"/>
+                                <include reference="m8k-Hw-l1e"/>
+                                <include reference="WqB-Bj-DOk"/>
+                                <include reference="xeE-aP-LFN"/>
                                 <exclude reference="0FT-a2-5GP"/>
                             </mask>
                         </variation>
@@ -437,20 +456,20 @@
                                 <exclude reference="cCe-pL-8vh"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="WzN-8f-FKc"/>
-                                <exclude reference="o8a-Pz-Q1m"/>
-                                <exclude reference="pfM-ge-KKk"/>
-                                <exclude reference="pjk-V9-ziv"/>
-                                <exclude reference="I1S-OX-gnd"/>
-                                <exclude reference="VGA-HG-dTp"/>
                                 <exclude reference="Cjc-0l-UqU"/>
                                 <exclude reference="UoN-mD-KbQ"/>
-                                <exclude reference="26g-Xt-mWK"/>
-                                <exclude reference="NBH-i3-1EN"/>
-                                <exclude reference="Iic-KK-IXF"/>
-                                <exclude reference="lUm-TM-kXf"/>
+                                <exclude reference="WzN-8f-FKc"/>
+                                <exclude reference="o8a-Pz-Q1m"/>
+                                <exclude reference="I1S-OX-gnd"/>
+                                <exclude reference="VGA-HG-dTp"/>
                                 <exclude reference="9nH-kN-cfu"/>
                                 <exclude reference="c5V-fH-Ouw"/>
+                                <exclude reference="Iic-KK-IXF"/>
+                                <exclude reference="lUm-TM-kXf"/>
+                                <exclude reference="pfM-ge-KKk"/>
+                                <exclude reference="pjk-V9-ziv"/>
+                                <exclude reference="26g-Xt-mWK"/>
+                                <exclude reference="NBH-i3-1EN"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -464,20 +483,20 @@
                                 <include reference="cCe-pL-8vh"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="WzN-8f-FKc"/>
-                                <include reference="o8a-Pz-Q1m"/>
-                                <include reference="pfM-ge-KKk"/>
-                                <include reference="pjk-V9-ziv"/>
-                                <include reference="I1S-OX-gnd"/>
-                                <include reference="VGA-HG-dTp"/>
                                 <include reference="Cjc-0l-UqU"/>
                                 <include reference="UoN-mD-KbQ"/>
-                                <include reference="26g-Xt-mWK"/>
-                                <include reference="NBH-i3-1EN"/>
-                                <include reference="Iic-KK-IXF"/>
-                                <include reference="lUm-TM-kXf"/>
+                                <include reference="WzN-8f-FKc"/>
+                                <include reference="o8a-Pz-Q1m"/>
+                                <include reference="I1S-OX-gnd"/>
+                                <include reference="VGA-HG-dTp"/>
                                 <include reference="9nH-kN-cfu"/>
                                 <include reference="c5V-fH-Ouw"/>
+                                <include reference="Iic-KK-IXF"/>
+                                <include reference="lUm-TM-kXf"/>
+                                <include reference="pfM-ge-KKk"/>
+                                <include reference="pjk-V9-ziv"/>
+                                <include reference="26g-Xt-mWK"/>
+                                <include reference="NBH-i3-1EN"/>
                             </mask>
                         </variation>
                     </view>
